--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.NightOwl"
         tools:targetApi="31">
 
+        <!-- Splash Screen -->
+        <activity
+            android:name=".SplashScreenActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:screenOrientation="fullSensor"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -25,9 +37,7 @@
 
         </activity>
         <receiver android:name=".AlarmReceiver" />
-
         <activity android:name=".NoteActivity" />
-        <activity android:name=".HistoryActivity" />
     </application>
 
 </manifest>
