fixing logo and intent

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_nightowl"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.NightOwl"
@@ -25,17 +25,7 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-
-            </intent-filter>
-
-        </activity>
+        <activity android:name=".MainActivity" />
         <receiver android:name=".AlarmReceiver" />
         <activity android:name=".NoteActivity" />
     </application>
