--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -28,7 +30,7 @@
 
         <activity android:name=".MainActivity" />
         <receiver android:name=".AlarmReceiver" />
-        <activity android:name=".NoteActivity" />
+<!--        <activity android:name=".NoteActivity" />-->
     </application>
 
 </manifest>
