--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:4.10.0"
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
 
 
 }
